style.css
/* ... */
.social-links{
  display: grid;
  gap: var(--build-gap);
  width: 100%;
  height: 100%;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto;
}

.social-icon{
  width: 40px;
  height: 40px;
  cursor: pointer;
  filter: invert(var(--filter-inversion-state));
}

.grid-item{
  border: 1px solid var(--accent-color-default);
  border-radius: 5px;
  max-height: 100%;
  max-width: 100%;
  white-space: wrap;
  display: flex;
  justify-content: center;
  align-items: center;
}

.accent-square{
  border: 15px solid var(--color-of-the-moment);
  border-radius: 5px;
  background-color: var(--color-of-the-moment);
}

.accent-square-inner:hover::after{
  animation: spin 2s infinite;
}

@keyframes spin {
  0%{
    transform: rotateY(0deg);
  }
  100%{
    transform: rotateY(360deg)
  }
}

.accent-square-inner {
  position: relative;
  font-family: cursive;
  width: 100%;
  height: 100%;
  border: 5px solid var(--color-of-the-moment);
  border-radius: 10px;
  background-color: var(--bg-color-default);
  /* To position the :after*/
  display: flex;
  justify-content: center;
  align-items: center;
}

.accent-square-inner:after{
  content: 'Fin.';
  font-family: cursive;
}

.mobile-profile{
  display: none;
}

.desktop-profile{
  display: block;
}

.truncate-btn{
  margin: 0 auto 1rem auto;
}

.collapsible{
  display: none;
  line-height: 1.5;
  /* transition: 0.3s; */
}

.slide-in{
  animation: slideIn 0.3s ease-in-out;
}

@keyframes slideIn {
  0% {
    opacity: 0;
    line-height: 0;
  }
  100% {
    opacity: 1;
    line-height: 1.5;
  }
}


/* Utils */

.zoom13 {
  scale: 1.3;
}

.hide-a-flex{
  display: none;
}

.hide{
  display: none;
}

.show{
  display: flex;
}

.grid{
  display: grid
}

.flex {
  display: flex;
}

.flex-column {
  flex-direction: column;
}

.flex-apart{
  justify-content: space-between;
}

.justify-center {
  justify-content: center;
}

.align-center {
  align-items: center;
}

.gap-10 {
  gap: 10px;
}

.gap-20 {
  gap: 20px;
}

.gap-40 {
  gap: 40px;
}

.layout-change{
  display: flex;
  flex-direction: column;
}



/* End Utils */

/* Media queries*/

@media screen and (max-width: 600px){

  .mobile-profile{
    display: flex;
    flex-direction: column;
    
  }

  .desktop-profile{
    display: none;
  }

  .crosshair-container{
    flex-direction: column;
  }

  .square-wrapper {
    flex-direction: column;
  }

  .top-left-square{
  border-top: 4px solid var(--crosshair-border-color);
  
  }
  
  .top-right-square{
    border-left:none;
    
  }
  
  .bottom-left-square{
    border-top: none;
  }
  
  .bottom-right-square{
    border-top: none;
    border-left: none;
  }
  
  .top-left-square, .top-right-square, .bottom-left-square, .bottom-right-square{
    border-bottom: 4px solid var(--crosshair-border-color);
    width: 100%;
    height: calc(100vw - 40px)
  }

}

@media screen and (max-width: 500px) {
  .credits {
    flex-direction: row;
    text-align: center;
    flex-wrap: wrap;
  }

  /* .preview-item{
    transition-duration: 0s;
  }  If I want to remove mobile transitions */ 

}
/* End of Mobile */


/* Tablet  / Windowed laptop */ 

@media screen and (min-width: 601px){

  .foreground-square{
    border: 2px solid var(--accent-color-default);
  }

  .crosshair-container{
    margin: 0 auto;
  }

  .vertical-buffer {
    margin-top: 15vh;
  }
}

/* End Tablet */

/* Laptop Full screen ++ */

@media screen and (min-width: 1200px){

  main {
    min-height: min-content;
  }

  .ghost-header{
    min-height: 10vh;
  }

  footer{
    margin-top: auto;
  }

  header{
    justify-content: center;  
  }

  .layout-change{
    flex-direction: row;
    gap: 20px;
  }

  .profile{
    max-height: 520px;
    max-width: 800px;
    overflow: scroll;
    margin: auto auto;
  }
  .vertical-buffer {
    margin-top: 8vh;
  }

  .tablet-and-smaller{
    display: none;
  }

  .laptop-and-bigger{
    display: block;
  }

}

@media screen and (min-width: 1500px) {

  .profile-col:nth-child(1){
    margin-top: 0;
  }

  .profile-timeline{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    text-align: center;
    padding: 0 20px;
    margin-top: 20px;
  }
  
  .profile-grid-cols{
    display: grid;
    gap: 10px;
    padding: 20px;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;
  }
  
  .profile-col{
    font-size: 0.8rem;
    padding: 10px;
    border: 1px dashed var(--accent-color-default);
    border-radius: 5px;
  }

  .profile-col > p {
    max-height: 160px;
    overflow: auto;
  }

}

@media screen and (max-width: 1200px){

  /* Don't require hover to show on mobile*/
  .hide-a-flex{display: flex;} /* unhide */
  .foreground-square{background-color: var(--bg-color-default)}
  /* end anti-hover*/
}

@media screen and (min-width: 900px) and (max-width: 1199px){
  .profile-col:nth-child(1){
    margin-top: 0;
  }

  .profile-timeline{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    text-align: center;
    padding: 0 20px;
    margin-top: 20px;
  }
  
  .profile-grid-cols{
    display: grid;
    gap: 10px;
    padding: 20px;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;
  }
  
  .profile-col{
    font-size: 0.8rem;
    padding: 10px;
    border: 1px dashed var(--accent-color-default);
    border-radius: 5px;
  }

  .profile-col > p {
    max-height: 130px;
    overflow: scroll;
  }

  

}

